// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > fixtures/basic.ts > useSource = false 1`] = `
"// basic.js
import { ElButton, ElCol } from 'element-plus';
import 'element-plus/es/components/button/style/css';
import 'element-plus/es/components/col/style/css';

console.log(ElButton, ElCol);
"
`;

exports[`rollup > fixtures/basic.ts > useSource = true 1`] = `
"// basic.js
import { ElButton, ElCol } from 'element-plus';
import 'element-plus/es/components/button/style/index';
import 'element-plus/es/components/col/style/index';

console.log(ElButton, ElCol);
"
`;

exports[`rollup > fixtures/comments.ts > useSource = false 1`] = `
"// comments.js
import { ElButton, ElCol } from 'element-plus';
import 'element-plus/es/components/button/style/css';
import 'element-plus/es/components/col/style/css';

console.log(ElButton, ElCol);
"
`;

exports[`rollup > fixtures/comments.ts > useSource = true 1`] = `
"// comments.js
import { ElButton, ElCol } from 'element-plus';
import 'element-plus/es/components/button/style/index';
import 'element-plus/es/components/col/style/index';

console.log(ElButton, ElCol);
"
`;

exports[`rollup > fixtures/ignored.ts > useSource = false 1`] = `
"// ignored.js
import { ElAutoResizer } from 'element-plus';
import 'element-plus/es/components/button/style/css';

console.log(ElAutoResizer);
"
`;

exports[`rollup > fixtures/ignored.ts > useSource = true 1`] = `
"// ignored.js
import { ElAutoResizer } from 'element-plus';
import 'element-plus/es/components/button/style/index';

console.log(ElAutoResizer);
"
`;

exports[`rollup > fixtures/import-alias.ts > useSource = false 1`] = `
"// import-alias.js
import { ElButton, ElCard } from 'element-plus';
import 'element-plus/es/components/button/style/css';
import 'element-plus/es/components/card/style/css';

console.log(ElButton, ElCard);
"
`;

exports[`rollup > fixtures/import-alias.ts > useSource = true 1`] = `
"// import-alias.js
import { ElButton, ElCard } from 'element-plus';
import 'element-plus/es/components/button/style/index';
import 'element-plus/es/components/card/style/index';

console.log(ElButton, ElCard);
"
`;
